--- a/frontend/src/components/Card/card.css
+++ b/frontend/src/components/Card/card.css
@@ -7,46 +7,44 @@ body {
     line-height: 1.6;
 }
 
-.list_of_cards { /* Changed to class */
+.list_of_cards { 
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 20px; /* Provides space between cards */
+    gap: 20px; 
 }
 
-.card-type { /* Changed to class */
+.card-type { 
     width: 250px;
     height: 300px;
     border-radius: 16px;
-    /* border: 2px solid orange; */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
-    background-size: cover; /* Resize the background image to cover the entire container */
+    background-size: cover; 
     background-repeat: no-repeat;
     background-position: center center;
-    overflow: hidden; /* Ensures nothing overflows the rounded borders */
+    overflow: hidden; 
     box-shadow: 3px 3px 0px 0px #ff6a00aa;
 }
 
-.top-card { /* Changed to class */
+.top-card { 
     display: flex;
-    justify-content: flex-end; /* Position the heart icon to the right */
+    justify-content: flex-end; 
     padding: 10px;
 }
 
-.top-card svg {
-    background-color: rgba(246, 247, 247, 0.371);
+.fav_button{
+    width: 25px;
+    height: 23px;
+    background-color: #f0f0f0;
     border-radius: 20px;
-    width: 20px;
-    height: 20px;
-    cursor: pointer; /* To indicate clickable */
 }
 
-/* Other styles remain the same */
 
-.bottom-card { /* Changed to class */
+
+.bottom-card { 
     margin-top: 160px;
     height: 100px;
     background-color: rgba(255, 255, 255, 0.8);
@@ -62,22 +60,21 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 100%; /* Adjusted for better layout */
+    width: 100%; 
 }
 
 .name-age, .race {
     text-align: center;
-    margin: 0 5px; /* Added some margin for spacing */
+    margin: 0 5px; 
 }
 
 .card_button {
     border-radius: 15px;
     font-size: smaller;
     background: linear-gradient(to right, #FF6C00, #ff8c33);
-    /* border: 1px solid orange; */
     padding: 5px 10px;
     cursor: pointer;
-    margin-top: auto; /* Push the button to the bottom */
+    margin-top: auto; 
     text-decoration: none;
 }
 .card_button:hover{
