--- a/frontend/src/components/DogInfo/picture/picture.css
+++ b/frontend/src/components/DogInfo/picture/picture.css
@@ -1,34 +1,34 @@
 .picture_component {
     background-color: #FF6C00;
-    max-width: 500px; /* Use max-width for scalability */
-    width: 100%; /* Make width flexible */
+    max-width: 500px; 
+    width: 100%; 
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 16px;
-    margin: auto; /* Center the component horizontally */
-    overflow: hidden; /* Prevent content from spilling out */
+    margin: auto; 
+    overflow: hidden; 
 }
 
-/* Adjust the size of the images and the carousel on smaller screens */
-@media (max-width: 768px) { /* For tablets and below */
+
+@media (max-width: 768px) { 
     .picture_component {
-        max-width: 400px; /* Slightly smaller on tablets */
+        max-width: 400px; 
     }
 
     .carousel-item img {
-        width: 100%; /* Ensure images are fully responsive */
-        height: auto; /* Maintain aspect ratio */
+        width: 100%; 
+        height: auto; 
     }
 }
 
-@media (max-width: 480px) { /* For mobile phones */
+@media (max-width: 480px) { 
     .picture_component {
-        max-width: 300px; /* Even smaller on mobile phones */
-        flex-direction: column; /* Stack items vertically if needed */
+        max-width: 100%;
+        flex-direction: column; 
     }
 
     .carousel-item img {
-        max-height: 200px; /* Limit image height on small screens */
+        max-height: 200px; 
     }
 }
