User + UpdateUser both component are responsive

--- a/frontend/src/components/DogInfo/picture/picture.css
+++ b/frontend/src/components/DogInfo/picture/picture.css
@@ -1,5 +1,5 @@
 .picture_component {
-    background-color: #FF6C00;
+    background-color: #ff6a0000;
     max-width: 500px; 
     width: 100%; 
     display: flex;
