--- a/frontend/src/components/DogInfo/doginfo.css
+++ b/frontend/src/components/DogInfo/doginfo.css
@@ -6,6 +6,7 @@
     width: 100%; 
     max-width: 1200px; 
     margin: auto; 
+    text-align: center;
 }
 
 /* For mobile, stack components vertically */
@@ -14,7 +15,7 @@
 }
 .owner-section{
     margin-top: 10px;
-    
+    padding-left: 90px;
 }
 
 @media (min-width: 768px) { 
